# mtg-collection-extractor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: anchor.rs  config.rs  database.rs  export.rs  main.rs  memory.rs  util.rs
