[package]
name = "mtga-collection-extractor"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "mtga-extractor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
indicatif = "0.17"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
]} 
strsim = "0.11"

bytemuck = { version = "1", features = ["derive"] }
rayon = "1"
clap = { version = "4", features = ["derive"] }
